# sample_code

./: .gitignore  LICENSE  README.md  asset_types.md  generic_asset_id_mappings.md
code/powershell/: 01-simple authentication.ps1
java/list_assets_and_sensors/: settings.gradle.kts
java/list_assets_and_sensors/app/: build.gradle.kts
powershell/: 01-simple_authentication.ps1  02-upload_floormounted_assets.ps1  05-list_assets_by_type.ps1  09-close_active_alarm_events.ps1  10-list-sensors.ps1  11-upload_location_assets.ps1
powershell/conf/: client_credential.json.example
powershell/data/: in_rack.csv  locations.csv
powershell/lib/: asset_helpers.psm1
python/: .env.example  .gitignore  01_query_assets_and_get_sensors.py  02_list_business_entities.py  03_output_sensor_list_for_assets.py
python/example_input_files/: asset_list_example.csv  test.csv
src/powershell/: 01-simple authentication.ps1  01-simple_authentication.ps1  02-upload_floormounted_assets.ps1  03-upload_inrack_assets.ps1  04-List-Assets-By-Type.ps1  04-upload_blade_assets.ps1  05-list_assets_by_type.ps1  06-list_alarm_events.ps1  07-acknowledge_alarm_events.ps1  08-list_active_alarm_events.ps1  09-close_active_alarm_events.ps1
src/powershell/conf/: hostname.json.example
src/powershell/data/: alarm_ids_to_acknowledge.csv  blades.csv  floor_mounted.csv  in_rack.csv
src/powershell/lib/: asset_helpers.psm1
src/rust/01-simple_authentication/: Cargo.toml
src/rust/samples/: Cargo.toml
src/rust/samples/data/: floor_mounted.csv  in_rack.csv
src/rust/samples/src/: lib.rs
(+5 files in other folders)
