[package]
edition = "2021"
name = "hv_api_integration_samples"
version = "0.1.0"
[dependencies]
confy = "*"
oauth2 = "4.1.0"
serde = "1.0.136"
dirs = "4.0.0"
serde_json = "1.0.79"
csv = "1.1.6"

[dependencies.clap]
features = ["derive"]
version = "3.1.8"

[dependencies.reqwest]
features = ["blocking", "json"]
version = "0.11"
